--- a/frontend/src/app/fonts.css
+++ b/frontend/src/app/fonts.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'Migra';
-  src: url('/fonts/migra/Migra-Extralight.woff2') format('woff2');
+  src: url('/fonts/Migra-Extralight.woff2') format('woff2');
   font-weight: 200;
   font-style: normal;
   font-display: swap;
@@ -8,7 +8,7 @@
 
 @font-face {
   font-family: 'Migra';
-  src: url('/fonts/migra/Migra-Extrabold.woff2') format('woff2');
+  src: url('/fonts/Migra-Extrabold.woff2') format('woff2');
   font-weight: 800;
   font-style: normal;
   font-display: swap;
@@ -16,7 +16,7 @@
 
 @font-face {
   font-family: 'Migra Italic';
-  src: url('/fonts/migra/Migraltalic-ExtralightItalic.woff2') format('woff2');
+  src: url('/fonts/MigraItalic-ExtralightItalic.woff2') format('woff2');
   font-weight: 200;
   font-style: italic;
   font-display: swap;
@@ -24,7 +24,7 @@
 
 @font-face {
   font-family: 'Migra Italic';
-  src: url('/fonts/migra/Migraltalic-ExtraboldItalic.woff2') format('woff2');
+  src: url('/fonts/MigraItalic-ExtraboldItalic.woff2') format('woff2');
   font-weight: 800;
   font-style: italic;
   font-display: swap;
