--- a/frontend/src/components/home/TranscendenceSword.module.css
+++ b/frontend/src/components/home/TranscendenceSword.module.css
@@ -11,9 +11,10 @@
   pointer-events: none;
 }
 
-
-
 .canvasContainer canvas {
   outline: none;
 }
 
+.glow {
+  filter: drop-shadow(0 0 10px rgba(129, 102, 226, .7))
+}
