--- a/frontend/src/app/home/page.module.css
+++ b/frontend/src/app/home/page.module.css
@@ -3,12 +3,12 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 40px;
   color: white;
   font-family: "Inter", sans-serif;
   position: relative;
   width: 100vw;
-  height: 100vh; 
+  height: 100vh;
+  overflow: hidden;
 }
 
 .techFrame {
